--- a/sbmsystem/bgmansystem-demo/package.json
+++ b/sbmsystem/bgmansystem-demo/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
+    "mavon-editor": "^2.7.7",
     "qs": "^6.9.0",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
